fix: add box-sizing property to ensure no horizontal scroll bar in editor

--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -48,6 +48,7 @@
 	/* Ensure selectable area */
 	padding: 0.625rem;
 	border: 1px dashed #ccc;
+	box-sizing: border-box;
 
 	&.is-selected {
 		border-color: var(--wp-admin-theme-color);
